--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,25 +1,65 @@
-<div class="reddit-body">
-  <div class="container">
+<div class="humanfirst-body">
+  <div class="container-fluid">
     <div class="row">
-      <hr />
-      <div class="col-md-2">
-        <div class="domain-sidebar">
-          <div class="domain-title">Domains</div>
-          <button
-            *ngFor="let domain of domains"
-            type="button"
-            class="domain-item"
-            [class.active]="selectedDomain === domain.key"
-            (click)="selectDomain(domain.key)">
-            {{domain.label}}
+      <div class="col-lg-3 col-xl-2">
+        <aside class="hf-sidebar">
+          <div class="hf-brand">Humanfirst</div>
+
+          <nav class="hf-nav">
+            <button
+              *ngFor="let item of primaryNavItems"
+              type="button"
+              class="hf-row"
+              [class.active]="isItemActive(item)"
+              (click)="handlePrimaryNavClick(item)">
+              <fa-icon class="hf-icon" [icon]="item.icon"></fa-icon>
+              <span>{{item.label}}</span>
+            </button>
+          </nav>
+
+          <hr class="hf-divider" />
+
+          <button type="button" class="hf-row hf-action-row" (click)="goToCreateSubreddit()">
+            <fa-icon class="hf-icon" [icon]="faPlus"></fa-icon>
+            <span>Start a community</span>
           </button>
-        </div>
+
+          <hr class="hf-divider" />
+
+          <section class="hf-section">
+            <div class="hf-section-header">
+              <span>COMMUNITIES</span>
+              <fa-icon [icon]="faChevronDown"></fa-icon>
+            </div>
+            <button
+              *ngFor="let item of communityItems"
+              type="button"
+              class="hf-row"
+              [class.active]="isItemActive(item)"
+              (click)="handleCommunityClick(item)">
+              <fa-icon class="hf-icon" [icon]="item.icon"></fa-icon>
+              <span>{{item.label}}</span>
+            </button>
+          </section>
+
+          <section class="hf-section">
+            <div class="hf-section-header">
+              <span>CUSTOM FEEDS</span>
+              <fa-icon [icon]="faChevronDown"></fa-icon>
+            </div>
+            <button type="button" class="hf-row">
+              <fa-icon class="hf-icon" [icon]="faPlus"></fa-icon>
+              <span>Create Custom Feed</span>
+            </button>
+          </section>
+        </aside>
       </div>
-      <div class="col-md-7">
+
+      <div class="col-lg-6 col-xl-7">
         <app-post-tile [posts]="posts"></app-post-tile>
       </div>
-      <div class="col-md-3">
-        <app-side-bar></app-side-bar>
+
+      <div class="col-lg-3 col-xl-3">
         <app-subreddit-side-bar></app-subreddit-side-bar>
       </div>
     </div>
