Update header branding to Humanfirst text-only

--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -1,19 +1,17 @@
 header{
     border-radius: 1px solid;
 }
-.reddit-icon-svg{
-    height: 50px;
-    padding: 8px 8px 8px 0;
-    width: 50px;
-}
-
 .reddit-text{        
     font-weight: 700;
-    height: 50px;
-    width: 50px;    
+    font-size: 32px;
+    line-height: 1.1;
+    color: #1c1c1c;
 }
 .logo{
     text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    padding-left: 6px;
 }
 
 .login, .sign-up{    
