--- a/frontend/src/app/post/view-post/view-post.component.html
+++ b/frontend/src/app/post/view-post/view-post.component.html
@@ -31,7 +31,7 @@
               <div class="form-group">
                 <textarea class="form-control" [formControlName]="'text'" placeholder="Your Thoughts?"></textarea>
               </div>
-              <button type="submit" class="login float-right">Comment</button>
+              <button type="submit" class="comment-submit float-right">Comment</button>
             </form>
           </div>
           <div style="margin-top: 60px;" *ngFor="let comment of comments">
