--- a/frontend/src/app/auth/user-profile/user-profile.component.html
+++ b/frontend/src/app/auth/user-profile/user-profile.component.html
@@ -1,20 +1,20 @@
-<div class="container">
-  <div>
+<div class="container profile-wrapper">
+  <div class="profile-summary">
     Welcome <b>{{name}}</b>.<br /> You have posted <b>{{postLength}}</b> time(s) and commented
     <b>{{commentLength}}</b> time(s).
     You can check your post and comment history below.
   </div>
   <hr />
-  <div>
+  <div class="profile-section-title">
     Your Posts:
   </div>
   <app-post-tile [posts]="posts"></app-post-tile>
   <hr />
-  <div>
+  <div class="profile-section-title">
     Your Comments:
   </div>
   <div *ngFor="let comment of comments">
-    <div class="comment">
+    <div class="profile-comment">
       <div class="username">
         <a routerLink="/user/comment.username">{{comment.userName}}</a>
       </div>
