--- a/frontend/src/app/post/create-post/create-post.component.html
+++ b/frontend/src/app/post/create-post/create-post.component.html
@@ -29,6 +29,8 @@
               <editor [formControlName]="'description'" [init]="{
                           height: 500,
                           menubar: false,
+                          skin: 'oxide-dark',
+                          content_css: 'dark',
                           plugins: [
                             'advlist autolink lists link image charmap print preview anchor',
                             'searchreplace visualblocks code fullscreen',
